[tool.poetry]
name = "smt_rmo"
version = "1.0.2"
description = "Small utility to reduce the size of and obfuscate an SMTLib input while preserving a solver's behavior"
authors = ["Aws Albarghouthi <awsb@amazon.com>, Antonio Filieri <afilieri@amazon.com>, Miryung Kim <miryung@amazon.com>, Jiyuan Wang <jiyuanw@amazon.com>"]
readme = "README.md"
packages = [
    { include = "smt_rmo", from = "src" },
    { include = "pysmt", from = "vendors" },
]
[tool.poetry.scripts]
smt-rmo = 'smt_rmo.cli:cli'

[tool.poetry.dependencies]
python = ">=3.8"
toml = "^0.10.2"
pysmt = {path = "vendors/pysmt"}
click = "^8.1.7"
pytest = "^7.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
