[metadata]
name = smt_rmo
description = smt-rmo
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = True
packages =
    smt_rmo
    pysmt
package_dir =
    smt_rmo = src/smt_rmo
    pysmt = vendors/pysmt/pysmt
include_package_data = True
root_script_source_version = default-only
